--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -7,6 +7,9 @@ on:
       - master
       - main
   pull_request:
+    branches:
+      - master
+      - main
 permissions:
   contents: read
 jobs:
