--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -13,7 +13,7 @@ on:
 permissions:
   contents: read
 jobs:
-  golangci:
+  golang-linter:
     name: discord-bitbucket
     runs-on: ubuntu-latest
     steps:
